Move RAWCPP macro to xorg-macros.m4 so other modules can use it Add check     for whether or not RAWCPP needs -traditional instead of hardcoding it,     so non-gcc cpp's can be used

--- a/Makefile.am
+++ b/Makefile.am
@@ -20,6 +20,6 @@
 #  CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 
 aclocaldir = $(datadir)/aclocal
-aclocal_DATA = xorgversion.m4
+aclocal_DATA = xorgversion.m4 xorg-macros.m4
 
 EXTRA_DIST = $(aclocal_DATA)
