Add XORG_MACROS_VERSION macro to check minimum version of xorg-macros.m4
- Move xorg-macros.m4 to xorg-macros.m4.in so @VERSION@ can be substituted from
  the version listed in configure.ac
- Add comments to each macro listing what version it was first added in

--- a/configure.ac
+++ b/configure.ac
@@ -41,4 +41,4 @@ if test "x$RELEASE_VERSION" != "x"; then
 	AC_MSG_NOTICE([Building with package name set to $PACKAGE])
 fi
 
-AC_OUTPUT([Makefile])
+AC_OUTPUT([Makefile xorg-macros.m4])
