Makefile.am: make ChangeLog hook safer Make ChangeLog hook as safe as possible.

--- a/Makefile.am
+++ b/Makefile.am
@@ -27,7 +27,7 @@ EXTRA_DIST = $(aclocal_DATA) ChangeLog
 .PHONY: ChangeLog
 
 ChangeLog:
-	(cd $(srcdir) && git-log) > ChangeLog
+	(GIT_DIR=$(top_srcdir)/.git git-log > .changelog.tmp && mv .changelog.tmp ChangeLog; rm -f .changelog.tmp) || (touch ChangeLog; echo 'git directory not found: installing possibly empty changelog.' >&2)
 
 dist-hook: ChangeLog
 
