reorganize autoconf macro files
append xorgversion.m4 to xorg-macros.m4.in, instead of installing
it as separate file.
Avoid copying some code from xorgversion.m4 to configure.ac.

--- a/xorg-macros.m4.in
+++ b/xorg-macros.m4.in
@@ -1,3 +1,4 @@
+dnl @configure_input@
 dnl
 dnl Copyright 2005-2006 Sun Microsystems, Inc.  All rights reserved.
 dnl 
@@ -423,3 +424,4 @@ AC_SUBST(LINTLIB)
 AM_CONDITIONAL(MAKE_LINT_LIB, [test x$make_lint_lib != xno])
 
 ]) # XORG_LINT_LIBRARY
+
