Fix comment in XORG_MACROS_VERSION on usage
The comment recommending checking XORG_MACROS_VERSION with m4_ifndef was
flawed for two reasons:

 * m4_fatal should be used if the macro is not defined. There's no use
   generating configure if the macro doesn't exist. Just fail during
   autoconf.
 * There's no reason to mention the version needed in the message. That
   check does not do version verification. That's what the actual macro
   is for.

Signed-off-by: Dan Nicholson <dbn.lists@gmail.com>

--- a/xorg-macros.m4.in
+++ b/xorg-macros.m4.in
@@ -35,8 +35,9 @@ dnl of the copyright holder.
 # your configure.ac with the minimum required version, such as:
 # XORG_MACROS_VERSION(1.1)
 #
-# To force at least a version with this macro defined, also add:
-# m4_ifndef([XORG_MACROS_VERSION], [AC_FATAL([must install xorg-macros 1.1 or later before running autoconf/autogen])])
+# To ensure that this macro is defined, also add:
+# m4_ifndef([XORG_MACROS_VERSION],
+#     [m4_fatal([must install xorg-macros before running autoconf/autogen])])
 #
 #
 # See the "minimum version" comment for each macro you use to see what 
