Restore part of the XORG_MACROS_VERSION comment
The 1.1 or later part is actually important since XORG_MACROS_VERSION
didn't exist before then.

Signed-off-by: Dan Nicholson <dbn.lists@gmail.com>

--- a/xorg-macros.m4.in
+++ b/xorg-macros.m4.in
@@ -37,7 +37,7 @@ dnl of the copyright holder.
 #
 # To ensure that this macro is defined, also add:
 # m4_ifndef([XORG_MACROS_VERSION],
-#     [m4_fatal([must install xorg-macros before running autoconf/autogen])])
+#     [m4_fatal([must install xorg-macros 1.1 or later before running autoconf/autogen])])
 #
 #
 # See the "minimum version" comment for each macro you use to see what 
