--- a/xorg-macros.m4.in
+++ b/xorg-macros.m4.in
@@ -485,3 +485,17 @@ fi
 CWARNFLAGS="$CWARNFLAGS $STRICT_CFLAGS"
 AC_SUBST([CWARNFLAGS])
 ]) # XORG_STRICT_OPTION
+
+# XORG_DEFAULT_OPTIONS
+# --------------------
+# Minimum version: 1.3.0
+#
+# Defines default options for X.Org modules.
+#
+AC_DEFUN([XORG_DEFAULT_OPTIONS], [
+XORG_CWARNFLAGS
+XORG_STRICT_OPTION
+XORG_RELEASE_VERSION
+XORG_CHANGELOG
+XORG_MANPAGE_SECTIONS
+]) # XORG_DEFAULT_OPTIONS
