Add an XORG_INSTALL macro to allow comps to copy the INSTALL file #24206
The Makefile installs INSTALL in share/doc/util-macros
An INSTALL_CMD is provided in the new XORG_INSTALL macro
which is added to XORG_DEFAULT_OPTIONS.

Components add INSTALL target to their Makefile similar to ChangeLog

--- a/xorg-macros.m4.in
+++ b/xorg-macros.m4.in
@@ -497,5 +497,20 @@ XORG_CWARNFLAGS
 XORG_STRICT_OPTION
 XORG_RELEASE_VERSION
 XORG_CHANGELOG
+XORG_INSTALL
 XORG_MANPAGE_SECTIONS
 ]) # XORG_DEFAULT_OPTIONS
+
+# XORG_INSTALL()
+# ----------------
+# Minimum version: 1.4.0
+#
+# Defines the variable INSTALL_CMD as the command to copy
+# INSTALL from $prefix/share/doc/util-macros.
+#
+AC_DEFUN([XORG_INSTALL], [
+INSTALL_CMD="if test -f "$prefix/share/doc/util-macros/INSTALL"; then \
+cp -f "$prefix/share/doc/util-macros/INSTALL" \$(top_srcdir); \
+else echo '$prefix/share/doc/util-macros/INSTALL cannot be found.' >&2; fi "
+AC_SUBST([INSTALL_CMD])
+]) # XORG_INSTALL
