xorg-macros.pc.in: create a meta data file for util-macros
This is motivated primarly by XORG_INSTALL who needs to locate
the docdir when invoked from any module that may not be installed
using same prefix (default or otherwise).

There are other potential use for this file.

--- a/Makefile.am
+++ b/Makefile.am
@@ -29,6 +29,11 @@ dist_doc_DATA = INSTALL
 install-data-hook:
 	rm -f $(DESTDIR)$(aclocaldir)/xorgversion.m4
 
+pkgconfigdir = $(datadir)/pkgconfig
+pkgconfig_DATA = xorg-macros.pc
+
+EXTRA_DIST = xorg-macros.pc.in
+
 .PHONY: ChangeLog
 
 ChangeLog:
