configure.ac: use single statement for file generation
Reported-by: Peter Hutterer <peter.hutterer at who-t.net>
Signed-off-by: Gaetan Nadon <memsize@videotron.ca>

--- a/configure.ac
+++ b/configure.ac
@@ -40,6 +40,6 @@ m4_include([xorgversion.m4])
 XORG_RELEASE_VERSION
 XORG_CHANGELOG
 
-AC_CONFIG_FILES([xorg-macros.pc])
-AC_CONFIG_FILES([Makefile xorg-macros.m4:xorg-macros.m4.in:xorgversion.m4])
+AC_CONFIG_FILES([xorg-macros.pc
+                 Makefile xorg-macros.m4:xorg-macros.m4.in:xorgversion.m4])
 AC_OUTPUT
