INSTALL doesn't belong in docdir, use pkgdatadir instead
docdir stays in xorg-macros.pc so we don't break the existing
$(INSTALL_CMD).

Tested-by: Gaetan Nadon <memsize@videotron.ca>
Signed-off-by: Julien Cristau <jcristau@debian.org>
Signed-off-by: Gaetan Nadon <memsize@videotron.ca>

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,7 +21,7 @@
 
 aclocaldir = $(datadir)/aclocal
 aclocal_DATA = xorg-macros.m4
-dist_doc_DATA = INSTALL
+dist_pkgdata_DATA = INSTALL
 
 # Previous versions used to install xorgversion.m4, now integrated
 # into xorg-macros.m4.  Explicitly remove that old file in order not
