--- a/xorg-macros.pc.in
+++ b/xorg-macros.pc.in
@@ -3,9 +3,12 @@ exec_prefix=@exec_prefix@
 includedir=@includedir@
 datarootdir=@datarootdir@
 datadir=@datadir@
-PACKAGE_TARNAME=@PACKAGE_TARNAME@
+PACKAGE=@PACKAGE@
 # Used by XORG_INSTALL
-docdir=@docdir@
+pkgdatadir=${datadir}/${PACKAGE}
+# docdir is kept for backwards compatibility with XORG_INSTALL from
+# util-macros 1.4
+docdir=${pkgdatadir}
 
 Name: X.Org Macros
 Description: A set of autoconf project macros for X.Org modules
